# walkies

./: .gitignore  Makefile  README.md  autogen.sh  build-dpk.sh  config.mk.in  configure.ac
pkg/meta/: manifest.json
pkg/meta/scripts/: postinst  postrm  preinst  prerm
pkg/payload/etc/: interfaces
pkg/payload/etc/claw/services.d/: walkies-monitor.yml  walkies.yml
pkg/payload/etc/claw/targets.d/: claw-network.target.yml
pkg/payload/sbin/: .gitkeep
tools/: build-musl.sh
user/: walkies.c  walkies.h
